--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.1.1
-
+  flutter_bloc: ^8.1.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
